--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,11 @@ criterion = "0.5.1"
 [workspace]
 members = [ "aoc_common" ]
 
+[[bin]]
+name = "aoc-2024-rust"
+path = "src/main.rs"
+test = false
+
 [[bench]]
 name = "day_bench"
 harness = false
