--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 clap = { version = "4.5.21", features = ["derive"] }
 dotenvy = "0.15.7"
 aoc_common = { path = "aoc_common" }
+itertools = "0.13.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
@@ -21,6 +22,10 @@ test = false
 
 [[bench]]
 name = "day_bench"
+harness = false
+
+[[bench]]
+name = "day_02"
 harness = false
 
 [[bench]]
