--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ clap = { version = "4.5.21", features = ["derive"] }
 dotenvy = "0.15.7"
 aoc_common = { path = "aoc_common" }
 itertools = "0.13.0"
+regex = "1.11.1"
+once_cell = "1.20.2"
+nom = "7.1.3"
 
 [dev-dependencies]
 criterion = "0.5.1"
