--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ itertools = "0.13.0"
 regex = "1.11.1"
 once_cell = "1.20.2"
 nom = "7.1.3"
+rayon = "1.10.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
